[metadata]
name = process life-and-death monitor
version = 0.1.0
description = Process life-and-death monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/ladmon
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    psutil
    colorama

[options.entry_points]
console_scripts =
    process-life-and-death-monitor = process_life_and_death_monitor.process_life_and_death_monitor:main
